--- a/lab2app/app/src/main/res/values/strings.xml
+++ b/lab2app/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="correct_toast">Правильно</string>
     <string name="incorrect_toast">Неправильно </string>
+    <string name="cheater_text">Списывать нехорошо </string>
 </resources>
